trying to fix padding bottom on mobile

--- a/styles2.css
+++ b/styles2.css
@@ -309,6 +309,9 @@ h1 {
         margin-top: 1.0rem;
         margin-bottom: 1.0rem;
     }
+    .page {
+        padding-bottom: 100px;
+    }
 }
 
 @media (max-width: 367px) {
